État avant intégration complète version 3